[package]
name = "cream"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["libs/cream_derive", "libs/cream_events_core"]

[dependencies]
async-trait = "0.1.81"
tokio = { version = "1.39.1", features = ["full"] }
cream_derive = { path = "./libs/cream_derive" }
tokio-util = { version = "^0.7.0", features = ["full"] }
cream_events_core = { path = "./libs/cream_events_core" }
